# DiegosFirstPackageGit

./: .gitignore  bibliography.bib  setup.cfg  setup.py
src/awesomediegopackage/: __init__.py  __main__.py  basic_arithmetic.py
tests/: testing_functions.py
