[metadata]
name = awesomediegopackage
version = 0.0.2
author = Stucchi Diego (test)
author_email = stucchidiego1994@gmail.com
description = My first (useless) package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DiegoStucchi/DiegosFirstPackageGit
project_urls =
    Bug Tracker = https://github.com/DiegoStucchi/DiegosFirstPackageGit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src